...
                      width: Get.width * 0.75,
                      height: Get.height * 0.3,
                    ),
                    Padding(
                      padding: EdgeInsets.only(top: Get.height * 0.0),
                      child: TextField(
                          key: const Key('email'),
                          style: TextStyle(fontSize: Get.width * 0.05),
                          controller: controller.loginController,
                          cursorColor: const Color(0xFF465275),
                          decoration: InputDecoration(
                              alignLabelWithHint: true,
                              contentPadding: EdgeInsets.symmetric(
...
                                    color: Color(0xFF465275), width: 0.8),
                              ))),
                    ),
                    Padding(
                      padding: EdgeInsets.only(top: Get.height * 0.04),
                      child: TextField(
                          key: const Key('password'),
                          style: TextStyle(fontSize: Get.width * 0.05),
                          obscureText: true,
                          controller: controller.passwordController,
                          cursorColor: const Color(0xFF465275),
                          decoration: InputDecoration(
                              alignLabelWithHint: true,
...
                          top: Get.height * 0.09, bottom: Get.height * 0.015),
                      child: Obx(
                        () => controller.isLoading.value
                            ? const CircularProgressIndicator(
                                color: Color(0xFF465275))
                            : InkWell(
                                key: const Key('login_button'),
                                onTap: () async {
                                  dynamic result = await controller.login();
                                  if (result == true) {
                                    Get.off(() => const Home(),
                                        binding: HomeBinding());
                                  } else {
...
                                  ),
                                ),
                              ),
                      ),
                    ),
                    InkWell(
                      key: const Key('register_button'),
                      onTap: () => controller.goToRegister(),
                      child: Text('Don\'t have an account? Sign up',
                          style: TextStyle(
                              color: const Color(0xFF465275),
                              fontSize: Get.height * 0.02,
                              decoration: TextDecoration.underline)),
...
