...
                            Container(
                              height: Get.height * 0.3,
                              width: Get.width,
                              padding: EdgeInsets.symmetric(
                                  horizontal: Get.width * 0.02),
                              child: Card(
                                key: const Key('word_card'),
                                shape: RoundedRectangleBorder(
                                  borderRadius: BorderRadius.circular(15),
                                ),
                                child: Column(
                                  mainAxisAlignment: MainAxisAlignment.end,
                                  children: [
...
                                      padding: EdgeInsets.only(
                                          left: Get.width * 0.75,
                                          bottom: Get.height * 0.01),
                                      child: InkWell(
                                          child: Obx(
                                            () => Icon(
                                                key: Key('play_audio'),
                                                controller.isPlaying.value
                                                    ? Icons.pause
                                                    : Icons.play_arrow_rounded,
                                                size: Get.width * 0.1,
                                                color: const Color(0xFF465275)),
                                          ),
...
                              alignment: Alignment.center,
                              decoration: BoxDecoration(
                                color: Colors.grey[600],
                                borderRadius: BorderRadius.circular(5),
                              ),
                              child: Text(
                                key: const Key('back_word_button'),
                                'Back',
                                style: TextStyle(
                                  fontSize: Get.width * 0.05,
                                  fontWeight: FontWeight.bold,
                                  color: Colors.white,
                                ),
...
                              alignment: Alignment.center,
                              decoration: BoxDecoration(
                                color: const Color(0xFF465275),
                                borderRadius: BorderRadius.circular(5),
                              ),
                              child: Text(
                                key: const Key('next_word_button'),
                                'Next',
                                style: TextStyle(
                                  fontSize: Get.width * 0.05,
                                  fontWeight: FontWeight.bold,
                                  color: Colors.white,
                                ),
...
